# invest-python

./: .gitignore  404.html  BREAKING_CHANGES.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  base_service.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  issue.yaml
.github/workflows/: bumpversion.yml  check.yml  pypi.yml  test_action.yml
CHANGELOG/: index.html
CONTRIBUTING/: index.html
api/clients/: index.html
docs/: examples.md
examples/: all_candles.py  async_all_candles.py  async_get_asset_reports.py  async_get_assets.py  async_get_bond_events.py  async_get_bonds.py  async_get_candles_with_limit.py  async_get_consensus_forecasts.py  async_get_forecast_by.py  async_get_insider_deals.py  async_get_last_prices.py  async_get_market_values.py  async_get_orders.py  async_get_risk_rates.py  async_get_sandbox_max_lots.py  async_get_signals.py  async_get_strategies.py  async_get_tech_analysis.py  async_indicatives.py  async_instrument_favorites.py  async_order_state_stream.py  async_post_order_async.py  async_retrying_client.py  async_stream_client.py  download_all_candles.py  easy_async_stream_client.py  get_active_orders.py  get_asset_fundamentals.py  get_asset_reports.py  get_assets.py  get_bond_events.py  get_bonds.py  get_brands.py  get_candles_with_limit.py  get_consensus_forecasts.py  get_figi_by_ticker.py  get_forecast_by.py  get_insider_deals.py  get_last_prices.py  get_last_trades.py  (+25 more)
examples/strategies/: param-search.ipynb
protos/tinkoff/invest/grpc/: common.proto  instruments.proto  marketdata.proto  orders.proto  (+5 more)
robots/: index.html
scripts/: download_protos.py  generate_models.py  update_package_version.py  version.py
search/: search_index.json
tests/: test_instruments.py  test_marketdata.py  test_protobuf_to_dataclass.py  test_sandbox.py  test_signals.py  test_stoporders.py  test_utils.py  utils.py
tests/data_loaders/: test_cached_load.py  test_get_all_candles.py  test_sandbox_cached_load.py
tests/marketdata/: test_async_marketdata.py
tests/test_orders_canceling/: test_async_orders_canceler.py  test_orders_canceler.py
tests/test_strategies/test_moving_average/: test_trader_in_sandbox.py
tinkoff/invest/: __init__.py  _grpc_helpers.py  async_services.py  candle_getter_protocol.py  constants.py  schemas.py  services.py  utils.py
tinkoff/invest/grpc/: common.py  common_pb2.py  common_pb2.pyi  instruments.py  instruments_pb2.py  instruments_pb2.pyi  instruments_pb2_grpc.py  marketdata.py  marketdata_pb2.py  marketdata_pb2.pyi  marketdata_pb2_grpc.py  operations.py  operations_pb2.py  operations_pb2.pyi  operations_pb2_grpc.py  orders.py  orders_pb2.py  orders_pb2.pyi  orders_pb2_grpc.py  sandbox.py  sandbox_pb2.py  sandbox_pb2.pyi  sandbox_pb2_grpc.py  signals_pb2.py  signals_pb2.pyi  signals_pb2_grpc.py  stoporders.py  stoporders_pb2.py  stoporders_pb2.pyi  stoporders_pb2_grpc.py  users.py  users_pb2.py  users_pb2.pyi  users_pb2_grpc.py
tinkoff/invest/sandbox/: async_client.py
(+12 files in other folders)
